# aocd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml
aocd-proc/: Cargo.toml  README.md
aocd-proc/src/: lib.rs
src/: cache.rs  client.rs  lib.rs  prelude.rs
