[package]
name = "aocd"
version = "0.3.6"
edition = "2021"
description = "Advent of Code Data - get puzzle input and submit answers from within your code"
documentation = "https://docs.rs/aocd"
homepage = "https://github.com/bsamseth/aocd"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
regex = "1.9.6"
minreq = { version = "2.10.0", features = ["https-rustls"] }
urlencoding = "2.1.3"
shellexpand = "3.1.0"
aocd-proc = { path = "./aocd-proc", version = "0.3.1" }

[dev-dependencies]
mockall = "0.11.3"
mockito = "0.31.1"
temp-env = "0.3.1"
tempfile = "3.3.0"
