[package]
name = "aocd-proc"
version = "0.3.0"
edition = "2021"
description = "Procedural macros for aocd"
documentation = "https://docs.rs/aocd"
homepage = "https://github.com/bsamseth/aocd"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
chrono = "0.4.23"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full"] }
