[package]
name = "aocd-proc"
version = "0.3.1"
edition = "2021"
description = "Procedural macros for aocd"
documentation = "https://docs.rs/aocd"
homepage = "https://github.com/bsamseth/aocd"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
chrono = "0.4.31"
proc-macro2 = "1.0.68"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
